removed margin-bottom from #center-div since it has margin-top in order to avoid overlapping with the text field (not 100% of the time but much better)

--- a/dgk-files/main.css
+++ b/dgk-files/main.css
@@ -1,7 +1,6 @@
 #center-div {
     text-align: center;
     margin-top: 35vh;
-    margin-bottom: 65vh;
 }
 #search {
     max-width: 500px;
